# Compiler-Mx_star

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RV.s  SSA.ll  build.bash  build.sh  builtin.c  builtin.s  codegen.bash  debug.txt  main.cpp  semantic.bash  semantic.sh  test.in  test.mx  test.out  test.s
AST/: ASTBuilder.cpp  ASTBuilder.h  ASTNode.cpp  ASTNode.h  ASTVisitor.cpp  ASTVisitor.h  Builtin.cpp  Builtin.h  Env.h  SemanticIssue.cpp  SemanticIssue.h  SematicIssue.cpp  SematicIssue.h  SymbolTable.cpp  SymbolTable.h  TypeChecker.cpp  TypeChecker.h  Types.cpp  Types.h  types.cpp  types.h
Codegen/: InstSelector.cpp  InstSelector.h  Liveness.cpp  Liveness.h  RVInst.cpp  RVInst.h  RVProgram.cpp  RVProgram.h  RegAllocation.cpp  RegAllocation.h  RegInfo.cpp  RegInfo.h
IR/: DominatorTree.cpp  DominatorTree.h  IR.cpp  IR.h  IRBuilder.cpp  IRBuilder.h  IRProgram.cpp  IRProgram.h  SSAConstructor.cpp  SSAConstructor.h  SSADestructor.cpp  SSADestructor.h
frontend/: EvalVisitor.h
grammar/: Mx_star.g4
lexer_parser/: Mx_star.interp  Mx_star.tokens  Mx_starBaseListener.cpp  Mx_starBaseListener.h  Mx_starBaseVisitor.cpp  Mx_starBaseVisitor.h  Mx_starLexer.cpp  Mx_starLexer.h  Mx_starLexer.interp  Mx_starLexer.tokens  Mx_starListener.cpp  Mx_starListener.h  Mx_starParser.cpp  Mx_starParser.h  Mx_starVisitor.cpp  Mx_starVisitor.h
local-judge/: config.yaml
